--- a/android.html
+++ b/android.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <h1>
-            Curiosidades de Tecnologia
+            História do Boneco Android
         </h1>
         <p>
             Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um único lugar
