--- a/android.html
+++ b/android.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <h1>
-            História do Boneco Android e o Mundo da tecnologia.
+            História
         </h1>
         <p>
             Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um único lugar
