mudança de header

--- a/android.html
+++ b/android.html
@@ -13,16 +13,16 @@
 <body>
     <header>
         <h1>
-            História do Boneco Android e o Mundo da Tecnologia.
+            Curiosidades sobre o Mundo Tech
+        </h1>
         <p>
-            Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um único lugar
+            Tudo que você precisa saber sobre o macote do Android e sua evolução
         </p>
     </header>
     <nav>
         <a href="#">Home</a>
         <a href="#">Noticias</a>
-        <a href="#">Curiosidades</a>
-        <a href="#">Fale Conosco</a>
+        <a href="#">Contato</a>
      </nav> 
     <main>
         <article>
