mudança de header

--- a/android.html
+++ b/android.html
@@ -16,7 +16,7 @@
             Curiosidades sobre o Mundo Tech
         </h1>
         <p>
-            Tudo que você precisa saber sobre o macote do Android e sua evolução
+            Tudo que você precisa saber sobre o mascote do Android e sua evolução
         </p>
     </header>
     <nav>
